[project]
name = "dialog-engine"
version = "0.0.0"
description = "Universal multi-step dialog engine for building form-driven flows and Telegram bots."
authors = [{ name = "k0te1ch", email = "khvostov40@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["dialog", "wizard", "form", "validation", "workflow", "telegram", "aiogram"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
validation = ["pydantic>=2.0,<3.0"]
yaml = ["PyYAML>=6.0"]
aiogram = ["aiogram>=3.0,<4.0"]

[project.urls]
Homepage = "https://github.com/k0te1ch/DialogEngine"
Repository = "https://github.com/k0te1ch/DialogEngine"
Documentation = "https://github.com/k0te1ch/DialogEngine#readme"

[tool.poetry]
packages = [{ include = "dialog_engine" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15"
pytest = "^8.0"
pytest-cov = "^4.0"
pre-commit = "^3.4"
commitizen = "^4.4"
pytest-asyncio = ">=0.24"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by the formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"] # assert false

[tool.ruff.lint.isort]
known-first-party = ["dialog_engine"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
major_version_zero = true
# Versioning and the changelog are owned by release-please in CI
# (.github/workflows/release-please.yml). commitizen is used here only to
# validate commit messages via the pre-commit commit-msg hook.
update_changelog_on_bump = false
